# SmartDashboard

./: .gitignore  Agent_Session_Notes.md  CMakeLists.txt  README.md
ClientInterface_direct/: CMakeLists.txt
ClientInterface_direct/include/: sd_direct_publisher.h  sd_direct_retained_store.h  sd_smartdashboard_client.h
ClientInterface_direct/samples/: command_roundtrip_sample.cpp  publisher_sample.cpp
ClientInterface_direct/src/: sd_direct_publisher_stub.cpp  sd_direct_retained_store.cpp  sd_smartdashboard_client.cpp
ClientInterface_direct/tests/: capture_cli_tests.cpp  direct_publisher_tests.cpp  smartdashboard_client_tests.cpp  transport_parity_contract_tests.cpp
ClientInterface_direct/tools/: direct_state_probe_cli.cpp  direct_watch_cli.cpp  smartdashboard_capture_cli.cpp
SmartDashboard/: CMakeLists.txt
SmartDashboard/src/: main.cpp
SmartDashboard/src/app/: debug_log_paths.cpp  debug_log_paths.h  main_window.cpp  main_window.h  startup_instance_gate.cpp  startup_instance_gate.h
SmartDashboard/src/camera/: camera_publisher_discovery.cpp  camera_publisher_discovery.h  camera_stream_source.h  mjpeg_stream_source.cpp  mjpeg_stream_source.h
SmartDashboard/src/layout/: layout_serializer.cpp  layout_serializer.h
SmartDashboard/src/model/: variable_store.cpp  variable_store.h
SmartDashboard/src/resources/: resources.qrc
SmartDashboard/src/transport/: dashboard_transport.cpp  dashboard_transport.h  dashboard_transport_plugin_api.h  direct_subscriber_adapter.cpp  direct_subscriber_adapter.h
SmartDashboard/src/widgets/: camera_display_widget.cpp  camera_display_widget.h  camera_viewer_dock.cpp  camera_viewer_dock.h  line_plot_widget.cpp  line_plot_widget.h  playback_timeline_widget.cpp  playback_timeline_widget.h  run_browser_dock.cpp  run_browser_dock.h  tile_control_widget.cpp  tile_control_widget.h  variable_tile.cpp  variable_tile.h
SmartDashboard/tests/: dashboard_transport_registry_tests.cpp  line_plot_widget_tests.cpp  main_window_persistence_tests.cpp  playback_timeline_widget_tests.cpp  run_browser_dock_tests.cpp  startup_instance_gate_tests.cpp  tile_control_widget_tests.cpp  variable_tile_tests.cpp
SmartDashboard_Interface_direct/: CMakeLists.txt
SmartDashboard_Interface_direct/include/: sd_direct_clock.h  sd_direct_ring.h  sd_direct_shared_memory.h  sd_direct_subscriber.h  sd_direct_types.h  sd_direct_wire.h
SmartDashboard_Interface_direct/src/: sd_direct_clock.cpp  sd_direct_ring.cpp  sd_direct_shared_memory.cpp  sd_direct_subscriber_stub.cpp
cmake/: CopyQtRuntime.cmake
design/: SmartDashboard_Design.md
docs/: ai_development_guidelines.md  camera_widget_design.md  development_workflow.md  history.md  line_plot_notes.md  native_link_rollout_strategy.md  persistence_debugging.md  project_history.md  replay_parity_roadmap.md  replay_user_manual.md  requirements.md  roadmap.md  robot_simulation_transport_guide.md  testing.md  testing_harness_capture_cli.md
docs/journal/: 2026-03-17-direct-debugging-journey.md  2026-03-21-ds-env-root-cause.md
docs/learning/: regression_debugging.md
plugins/LegacyNtTransport/: CMakeLists.txt
plugins/LegacyNtTransport/src/: legacy_nt_transport_plugin.cpp
plugins/NT4Transport/: CMakeLists.txt
plugins/NT4Transport/include/: nt4_client.h
plugins/NT4Transport/src/: nt4_client.cpp  nt4_transport_plugin.cpp
plugins/NT4Transport/tests/: nt4_plugin_tests.cpp
plugins/NativeLinkTransport/: CMakeLists.txt  CONTRACT.md  README.md  TEST_PLAN.md
plugins/NativeLinkTransport/include/: native_link_carrier_client.h  native_link_core.h  native_link_ipc_client.h  native_link_ipc_protocol.h  native_link_ipc_test_server.h  native_link_tcp_client.h  native_link_tcp_protocol.h  native_link_tcp_test_server.h
plugins/NativeLinkTransport/src/: native_link_carrier_client.cpp  native_link_core.cpp  native_link_ipc_client.cpp  native_link_ipc_test_server.cpp  native_link_tcp_client.cpp  native_link_tcp_test_server.cpp  native_link_transport_plugin.cpp
plugins/NativeLinkTransport/tests/: native_link_core_tests.cpp  native_link_ipc_client_tests.cpp  native_link_plugin_tests.cpp
plugins/ShuffleboardTransport/: CMakeLists.txt
plugins/ShuffleboardTransport/include/: nt4_client.h
plugins/ShuffleboardTransport/src/: nt4_client.cpp  shuffleboard_transport_plugin.cpp
plugins/ShuffleboardTransport/tests/: shuffleboard_plugin_tests.cpp
tools/: direct_stress_harness.py  native_link_live_telemetry_verify.py  native_link_local_tcp_watch.py  native_link_multi_instance_smoke.py  native_link_observe_session.py  native_link_shared_state_probe.py  native_link_shm_disconnect_stress.py  native_link_tcp_disconnect_stress.py  native_link_tcp_runtime_probe.py  run_driverstation_localhost_test.py  sdcmd.ps1  smartdashboard_process.py  survive_sequence.py
